[tool.poetry]
name = "mdToWorld"
version = "0.1.0"
description = ""
authors = ["viktormorshc <morshc45@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
docx = "^0.2.4"
htmldocx = "^0.0.5"
marko = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
